color corrected buttons and modified spacing on vertical nav

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   font-family: Roboto;
-  /* background-color: #efdcd5; */
+  background-color: #e0e0e0;
   height: calc(100vh);
 }
 
